[package]
name = "patchbay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
clap = {version = "4.1.*", features = ["derive"]}
cpal = "0.15.*"
ctrlc = {version = "3.2.*", features = ["termination"]}
ringbuf = "0.3.*"
serde = {version = "1.0.*", features = ["derive"]}
toml = "0.7.*"
