[package]
name = "patchbay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
clap = {version = "4.1.*", features = ["derive"]}
cpal = "0.15.*"
ringbuf = "0.3.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.113"
signal-hook = "0.3.17"
sysinfo = "0.30.7"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
